# Vedra

./: .env.example  .gitignore  BUGFIX_AUTO_PUBLISHING.md  BUGFIX_MEDIA_GROUP_ID.md  CHANNEL_AUTO_SUBSCRIPTION.md  CHANNEL_ID_FIX.md  CHANNEL_MONITORING_FIX.md  CONTACT_DEEPLINKS_GUIDE.md  Context7 библиотеки.md  FIXES_MEDIA_AND_TEXT.md  IMPLEMENTATION_STAGE_8.md  IMPLEMENTATION_STAGE_9_10.md  IMPLEMENTATION_SUMMARY.md  MANUAL_SUBSCRIPTION_QUICKSTART.md  MEDIA_COPY_UPDATE.md  MEDIA_GROUPS_FIX.md  MEDIA_GROUPS_IMPLEMENTATION.md  MEDIA_PUBLICATION_FIX.md  Makefile  NEXT_STEPS_MEDIA_GROUPS.md  QUICK_COMMANDS.md  QUICK_START_CONFIG_LOGGING.md  QUICK_TEST_MEDIA.md  README.md  READY_TO_USE.md  SHEETS_FIX_SUMMARY.md  STAGE_8_SUMMARY.md  STARTUP_STATUS.md  TELEGRAM_API_LIMITATIONS.md  Tz.md  alembic.ini  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  check_monitor.py  check_posts_db.py  pyproject.toml  requirements.txt  restart_all.sh  restart_services_simple.sh  (+15 more)
.cursor/: .cursorrules
alembic/: README.md  env.py
alembic/versions/: 2025_10_23_2100-001_initial_migration.py  2025_10_24_1239-68d26c7de2d9_add_media_files_to_post.py  (+3 more)
all/: .gitignore  ANALYSIS_REPORT.md  AUTO_SUBSCRIPTION_SUMMARY.md  CREATE_SESSION_INSTRUCTIONS.md  DEPLOYMENT_SERVER_COMPLETE.md  Dockerfile  FINAL_REPORT_SUBSCRIPTIONS.md  FINAL_STATUS.md  FIX_SHEETS_SYNC.md  MEDIA_FIX_COMPLETE.md  MONITOR_FIXED_STRINGSESSION.md  PRIVATE_CHANNELS_SUPPORT.md  README.md  SERVER_ACCESS.md  SERVER_FIXED_REPORT.md  SERVER_FIX_INSTRUCTIONS.md  SERVER_QUICK_REFERENCE.md  alembic.ini  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  convert_to_string_session.py  create_monitor_session.py  deploy_fix_to_server.sh  docker-compose.yml  fix_server.sh  install_supervisor_config.sh  pyproject.toml
docs/: AUTO_SUBSCRIPTION.md  CELERY_SETUP.md  ENV_EXAMPLE.md  GOOGLE_SHEETS_STRUCTURE.md  LOGGING_AND_MONITORING.md  MANUAL_SUBSCRIPTION_MANAGEMENT.md  MESSAGE_PROCESSOR_ARCHITECTURE.md  MESSAGE_PROCESSOR_IMPLEMENTATION.md  MONITORING_SETUP.md  PUBLISHING_SERVICE.md  QUICKSTART.md  SUBSCRIPTION_QUICKSTART.md  SUBSCRIPTION_SYSTEM.md  YOOKASSA_SETUP.md
scripts/: README.md  add_monthly_subscription.py  check_google_sheets_structure.py  check_media_groups.py  check_post.py  check_specific_posts.py  check_user_subscription.py  check_video_posts.py  cleanup_invalid_channels.py  clear_posts_database.py  create_session.py  create_sheets_template.py  export_env.sh  fill_channel_titles.py  fill_channels_stats.py  fix_channel_urls.py  fix_old_posts_message_ids.py  fix_sheets_urls.py  populate_test_data.py  run_all.sh  run_bot.py  run_migrations.py  setup_existing_sheets.py  start_all_tmux.sh  start_bot.sh  start_celery_beat.sh  start_celery_worker.sh  start_monitor.sh  stop_celery.sh  subscribe_to_channels.py  terminal_1_monitor.sh  terminal_2_bot.sh  terminal_3_worker.sh  terminal_4_beat.sh  test_bot_setup.py  test_contact_deeplinks.py  test_google_sheets.py  test_manual_subscription.py  test_media_group_publishing.py  test_media_publishing.py  (+4 more)
sessions/: monitor_session.session  monitor_session_backup.txt  publishing_session.session
src/cars_bot/: celery_app.py
tests/: test_ai_processor.py  test_config.py  test_logging.py  test_message_processor.py  test_metrics.py  test_payment_providers.py  test_prompts.py  test_publishing_service.py  test_subscription_manager.py
(+69 files in other folders)
